<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileActivityEdit"
    android:orientation="vertical">

    <Button
        android:id="@+id/LogOutPE"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:backgroundTint="@color/white"
        android:text="@string/log_off"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_gravity="end"
        />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/medipc"
        android:textColor="#8B0000"
        android:textSize="40sp" />

    <TableLayout
        android:id="@+id/Menu0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_marginTop="30dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/profile_menu"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/opcao0"
                android:background="#A9A9A9"
                android:layout_marginStart="1dp"
                android:layout_marginVertical="1dp"
                android:textColor="@color/black"
                android:height="30dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/appointments"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/opcao1"
                android:background="@color/white"
                android:layout_marginStart="1dp"
                android:layout_marginVertical="1dp"
                android:textColor="@color/black"
                android:height="30dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/medication"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/opcao2"
                android:background="@color/white"
                android:layout_marginStart="1dp"
                android:layout_marginVertical="1dp"
                android:textColor="@color/black"
                android:height="30dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/alarm"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/opcao3"
                android:background="@color/white"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:textColor="@color/black"
                android:height="30dp"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp">

        <TableLayout
            android:id="@+id/tableDataPE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            android:gravity="center"
            android:background="@color/black"
            tools:ignore="UselessParent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/attribute"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="@color/tableTop"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/value"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="@color/tableTop"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/atNamePE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/name"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:gravity="center"
                    android:background="@color/rowColor"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/vlNamePE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text=""
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:gravity="center"
                    android:background="@color/rowColor"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/atAgePE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/age"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/vlAgePE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text=""
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/atSexPE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/sex"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="@color/rowColor"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/vlSexPE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text=""
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="@color/rowColor"
                    android:gravity="center"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/atHeightPE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/height"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/vlHeightPE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text=""
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/atWeightPE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/weight"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="@color/rowColor"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/vlWeightPE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="@color/rowColor"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/atBloodTypePE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/blood_type"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/vlBloodTypePE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text=""
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/atAlergiesPE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/alergies"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="@color/rowColor"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/vlAlergiesPE"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text=""
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="@color/rowColor"
                    android:gravity="center"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btDonePE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_gravity="end"
        android:backgroundTint="@color/red"
        android:layout_marginEnd="20dp"/>

</LinearLayout>